# atlas-provider-django

./: .gitignore  README.md  manage.py  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
atlas_provider_django/: settings.py
atlas_provider_django/management/commands/: atlas-provider-django.py  migrations.py
tests/: atlas.hcl  expected_all_apps.sql  expected_app1.sql  tests_command.py
tests/app/: apps.py
tests/app/migrations/: 0001_initial.py
tests/app1/: models.py
tests/app2/: models.py
tests/migrations/mssql/: 20240125082659.sql  20250527095205.sql  atlas.sum
tests/migrations/mysql/: 20240123150434.sql  atlas.sum
tests/migrations/postgresql/: 20240123150442.sql  20241107115133.sql  atlas.sum
tests/migrations/sqlite/: 20240123150447.sql  atlas.sum
tests_outdir/app3/: apps.py  models.py
