[tool.poetry]
name = "atlas-provider-django"
version = "0.1.0"
description = ""
authors = ["Atlas Team <hello@ariga.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = ">=4.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
